--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
         <div class="loading-logo-container">
             <img src="https://i.postimg.cc/8CPf69hS/IMG-4113.jpg" alt="شعار المحراب" class="loading-logo">
         </div>
-        <div class="loading-text">منصة المحراب: بوابتك للمعرفة والإلهام الإسلامي</div>
+        <div class="loading-text">مرحبًا بك في المحراب، منارة الفتوى ومصدرها الموثوق</div>
         <div class="loading-progress">
             <div class="loading-progress-bar"></div>
         </div>
@@ -1129,7 +1129,7 @@
             <li><a href="#hero"><i class="fas fa-home"></i> الرئيسية</a></li>
             <li><a href="#" onclick="showFatwaModal(); return false;"><i class="fas fa-book"></i> مكتبة الفتوى</a></li>
             <li><a href="#quotes-section"><i class="fas fa-quote-right"></i> الاقتباسات</a></li>
-            <li><a href="#" onclick="showContactModal(); return false;"><i class="fas fa-envelope"></i> تواصل معنا</a></li>
+            <li><a href="#" onclick="showContactModal(); return false;"><i class="fas fa-envelope"></i>الدعم </a></li>
         </ul>
     </div>
     <div class="sidebar-overlay" id="sidebarOverlay" onclick="closeSidebar()"></div>
