--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
         <a href="https://www.instagram.com/almihrab.om?igsh=MXJlZHgxdGM5dXAybQ==" target="_blank">
             <i class="fa-brands fa-instagram"></i> إنستغرام
         </a>
-        <a href="https://x.com/Oman_male?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank">
+        <a href="https://x.com/almihrabb?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank">
             <i class="fa-brands fa-x-twitter"></i> إكس
         </a>
     </div>
@@ -1506,7 +1506,7 @@
                 <a href="https://whatsapp.com/channel/0029VafTNNQ7DAWu5NQP0O3I" target="_blank">واتساب</a> |
                 <a href="https://youtube.com/@almihrab.om1?si=iUtB5q2kHfFIrg7G" target="_blank">يوتيوب</a> |
                 <a href="https://www.instagram.com/almihrab.om?igsh=MXJlZHgxdGM5dXAybQ==" target="_blank">إنستغرام</a> |
-                <a href="https://x.com/abdullah__krs?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank">إكس</a>
+                <a href="https://x.com/almihrabb?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank">إكس</a>
             </p>
             <button class="close-btn" onclick="closeContactModal()">إغلاق</button>
         </div>
